--- a/src/components/halloween/HalloweenBackground.module.css
+++ b/src/components/halloween/HalloweenBackground.module.css
@@ -93,11 +93,9 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: auto;
-  max-height: calc(100% - 200px);
+  height: 300vh;
   pointer-events: none;
   z-index: 1;
-  overflow: hidden;
 }
 
 .pumpkinsLayer {
